25-enterprise-devsecops-platform/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-service
  namespace: enterprise-devsecops
  labels:
    app: enterprise-app

spec:
  type: ClusterIP       # Ingress handles external traffic — ClusterIP is correct here
  selector:
    app: enterprise-app

  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
